--- a/machine-learning-bookcamp/6-ensemble-learning/04_credit_risk_scoring_final_model.ipynb
+++ b/machine-learning-bookcamp/6-ensemble-learning/04_credit_risk_scoring_final_model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOExCE4sxyVFO0XrpyKrsHj",
+      "authorship_tag": "ABX9TyOseZizZ7SV4YsF9JMvinMN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2614,7 +2614,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Performance monitoring"
+        "##Testing final model"
       ],
       "metadata": {
         "id": "i5nx6Gye8sOp"
@@ -2623,7 +2623,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# let's model on full dataset\n",
+        "# let's train model on full dataset\n",
         "df_train_full = df_train_full.reset_index(drop=True)\n",
         "y_train_full = (df_train_full.status == \"default\").astype(int).values"
       ],
