--- a/imbalanced-dataset/01-data-sampling/01_random_data_sampling.ipynb
+++ b/imbalanced-dataset/01-data-sampling/01_random_data_sampling.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPThtN0HrFo2+WnGGlh2ZPr",
+      "authorship_tag": "ABX9TyMbbaaFHqXyGdTmZsxY9a0P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,17 +42,25 @@
         "# example of random oversampling to balance the class distribution\n",
         "from collections import Counter\n",
         "from sklearn.datasets import make_classification\n",
-        "from imblearn.over_sampling import RandomOverSampler"
+        "from imblearn.over_sampling import RandomOverSampler\n",
+        "from imblearn.under_sampling import RandomUnderSampler\n",
+        "from numpy import mean\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from imblearn.pipeline import Pipeline\n"
       ],
       "metadata": {
         "id": "TaIUV2QzDFcb"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# example of random oversampling to balance the class distribution\n",
+        "\n",
         "# define dataset\n",
         "X, y = make_classification(n_samples=10000, weights=[0.99], flip_y=0)\n",
         "# summarize class distribution\n",
@@ -65,32 +73,29 @@
         "print(Counter(y_over))"
       ],
       "metadata": {
-        "id": "7EYDOsBoDGGA"
+        "id": "7EYDOsBoDGGA",
+        "outputId": "a563241c-9367-42d0-acd0-8421df6dcd95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Counter({0: 9900, 1: 100})\n",
+            "Counter({0: 9900, 1: 9900})\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# example of evaluating a decision tree with random oversampling\n",
-        "from numpy import mean\n",
-        "from sklearn.datasets import make_classification\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from imblearn.pipeline import Pipeline\n",
-        "from imblearn.over_sampling import RandomOverSampler"
-      ],
-      "metadata": {
-        "id": "7l9V9sRoCltY"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "\n",
         "# define dataset\n",
         "X, y = make_classification(n_samples=10000, weights=[0.99], flip_y=0)\n",
         "# define pipeline\n",
@@ -107,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bl88Dm_aCmn_",
-        "outputId": "2b615776-fd3d-4df3-d503-6d6d2ae1d90d"
+        "outputId": "2c1dfe6e-38e8-4186-c6b7-7e9b9ef80b21"
       },
       "execution_count": 3,
       "outputs": [
@@ -115,7 +120,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "F-measure: 0.985\n"
+            "F-measure: 0.989\n"
           ]
         }
       ]
@@ -131,12 +136,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# example of random undersampling to balance the class distribution\n",
+        "\n",
+        "# define dataset\n",
+        "X, y = make_classification(n_samples=10000, weights=[0.99], flip_y=0)\n",
+        "# summarize class distribution\n",
+        "print(Counter(y))\n",
+        "# define undersample strategy\n",
+        "undersample = RandomUnderSampler(sampling_strategy='majority')\n",
+        "# fit and apply the transform\n",
+        "X_over, y_over = undersample.fit_resample(X, y)\n",
+        "# summarize class distribution\n",
+        "print(Counter(y_over))"
+      ],
       "metadata": {
-        "id": "HaZQtmptDaog"
+        "id": "HaZQtmptDaog",
+        "outputId": "db483c95-dcae-4f5d-9e07-1b79d9053cc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Counter({0: 9900, 1: 100})\n",
+            "Counter({0: 100, 1: 100})\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define dataset\n",
+        "X, y = make_classification(n_samples=10000, weights=[0.99], flip_y=0)\n",
+        "# define pipeline\n",
+        "steps = [('under', RandomUnderSampler()), ('model', DecisionTreeClassifier())]\n",
+        "pipeline = Pipeline(steps=steps)\n",
+        "# evaluate pipeline\n",
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+        "scores = cross_val_score(pipeline, X, y, scoring='f1_micro', cv=cv, n_jobs=-1)\n",
+        "score = mean(scores)\n",
+        "print('F-measure: %.3f' % score)"
+      ],
+      "metadata": {
+        "id": "MB9mFtRss4Nw",
+        "outputId": "ba7b8490-cf55-4ad9-8cce-d2b2054715a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "F-measure: 0.816\n"
+          ]
+        }
+      ]
     }
   ]
 }
