--- a/ensemble-methods-for-machine-learning/02-homogeneous-parallel-ensembles/01_bagging_bootstrap_aggregating.ipynb
+++ b/ensemble-methods-for-machine-learning/02-homogeneous-parallel-ensembles/01_bagging_bootstrap_aggregating.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyNd+I2xsl1BsMFE22HU+/u9",
       "include_colab_link": true
     },
@@ -82,37 +83,10 @@
         "!wget https://github.com/gkunapuli/ensemble-methods-notebooks/raw/master/plot_utils.py"
       ],
       "metadata": {
-        "id": "7RDxP5T-xkZ_",
-        "outputId": "a1c25a59-14cb-4588-bd6a-8fe60fb6def3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "7RDxP5T-xkZ_"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-06-07 09:56:43--  https://github.com/gkunapuli/ensemble-methods-notebooks/raw/master/plot_utils.py\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/gkunapuli/ensemble-methods-notebooks/master/plot_utils.py [following]\n",
-            "--2023-06-07 09:56:43--  https://raw.githubusercontent.com/gkunapuli/ensemble-methods-notebooks/master/plot_utils.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 3281 (3.2K) [text/plain]\n",
-            "Saving to: ‘plot_utils.py.1’\n",
-            "\n",
-            "plot_utils.py.1     100%[===================>]   3.20K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2023-06-07 09:56:43 (27.7 MB/s) - ‘plot_utils.py.1’ saved [3281/3281]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -354,11 +328,11 @@
         "bagging_ensemble.oob_score_"
       ],
       "metadata": {
-        "id": "Fj_CV7_fS0H3",
-        "outputId": "e07c33ec-fc53-4518-ca90-76b53168b75a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fj_CV7_fS0H3",
+        "outputId": "e07c33ec-fc53-4518-ca90-76b53168b75a"
       },
       "execution_count": 29,
       "outputs": [
@@ -381,11 +355,11 @@
         "accuracy_score(y_test, y_pred)"
       ],
       "metadata": {
-        "id": "SahgHQF6S30a",
-        "outputId": "236cafaf-48c0-4a1a-e36e-aae9f4e2573b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SahgHQF6S30a",
+        "outputId": "236cafaf-48c0-4a1a-e36e-aae9f4e2573b"
       },
       "execution_count": 30,
       "outputs": [
@@ -441,12 +415,12 @@
         "fig.tight_layout()"
       ],
       "metadata": {
-        "id": "l7TID_G7TFyn",
-        "outputId": "8e968f8b-3ac6-48c6-a33c-a9a4c9b2177d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 587
-        }
+        },
+        "id": "l7TID_G7TFyn",
+        "outputId": "8e968f8b-3ac6-48c6-a33c-a9a4c9b2177d"
       },
       "execution_count": 31,
       "outputs": [
@@ -577,12 +551,12 @@
         "fig.tight_layout()"
       ],
       "metadata": {
-        "id": "6jbm0pRZT1m5",
-        "outputId": "7763728c-7a7c-45c5-d189-77f683a2579e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "id": "6jbm0pRZT1m5",
+        "outputId": "7763728c-7a7c-45c5-d189-77f683a2579e"
       },
       "execution_count": 40,
       "outputs": [
