--- a/machine-learning-with-pytorch-and-scikit-learn/16-transformers/01_self_attention_mechanism.ipynb
+++ b/machine-learning-with-pytorch-and-scikit-learn/16-transformers/01_self_attention_mechanism.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMi4UOOR5+Gn/lqhe9ZEorM",
+      "authorship_tag": "ABX9TyN+Rw9iJNmRoTbwkOeNNuOd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "ss2r1O62DGoj"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
         "id": "REfftBa5DP1g",
         "outputId": "1610fd9f-8cfe-4532-dbb7-c0823500be62"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +131,7 @@
         "id": "ko-qPhdLD655",
         "outputId": "af635e0d-71af-44b1-f552-ea653dd6c500"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step-1: compute the dot product**"
+        "**Step-1: Computing the dot product**"
       ],
       "metadata": {
         "id": "YCYFNhtVE8-1"
@@ -180,7 +180,7 @@
         },
         "outputId": "9809a490-3150-4c5b-e1e1-c2a10c68e9eb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
         "id": "OagreNT3D0ao",
         "outputId": "880d3ed0-99bc-4981-972d-fa33e951c426"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,7 +294,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +334,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +409,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
