--- a/machine-learning-with-pytorch-and-scikit-learn/16-transformers/02_scaled_dot_product_attention.ipynb
+++ b/machine-learning-with-pytorch-and-scikit-learn/16-transformers/02_scaled_dot_product_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOMOPnh5JXeBc3JMY7aJuez",
+      "authorship_tag": "ABX9TyM6tVutebr0beRo+hGLOWSr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,9 +96,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "REfftBa5DP1g",
-        "outputId": "da9a492d-9c58-47e4-9d37-0e9dc0ecf3ca"
+        "outputId": "9cc04d7a-41a7-431f-f225-7ab10bea4db8"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -108,7 +108,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -138,9 +138,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ko-qPhdLD655",
-        "outputId": "6ee59880-0c8f-4f2a-d2be-9ec02e02f256"
+        "outputId": "f3dbccf7-881e-4be9-ff60-cb77c024edfd"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -187,9 +187,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9bbdf7a3-3df3-4701-b952-7c00f9466794"
+        "outputId": "ed525383-e339-47a7-a317-b73974e775ee"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,9 +222,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OagreNT3D0ao",
-        "outputId": "f8897813-0168-45c6-a7d5-7ab399ca1816"
+        "outputId": "49be8a18-d2c2-4650-83a7-ca626ec30e05"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,12 +252,12 @@
       ],
       "metadata": {
         "id": "N48q4KniENpJ",
-        "outputId": "b31a3287-ee5a-4c8a-d04a-eee12ce632f5",
+        "outputId": "de5bc05a-f650-41e8-da72-fe5765e81424",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +267,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -298,12 +298,12 @@
       ],
       "metadata": {
         "id": "V-_MbKT9Fbpn",
-        "outputId": "3d9bef89-cbca-4679-f9c0-8d2d5d8c9cfd",
+        "outputId": "3b8ab75b-836f-45a6-f936-96ffbfd2de25",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,12 +338,12 @@
       ],
       "metadata": {
         "id": "QOqaPnJfGjYq",
-        "outputId": "a21e3fce-c124-42a4-ef18-09a91575017b",
+        "outputId": "8211cf17-4810-4d18-b3b7-d47f2aa43d69",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -354,7 +354,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -383,12 +383,12 @@
       ],
       "metadata": {
         "id": "WRQ1lH-fIRqN",
-        "outputId": "1b526784-8ac4-4494-c50b-a5228eb2d512",
+        "outputId": "118e0d4e-aaeb-4c50-e30d-dd6a38b18ea6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,12 +413,12 @@
       ],
       "metadata": {
         "id": "N3EZnSf4JzNl",
-        "outputId": "b0e08cec-0b94-4f5c-db37-607993928d7e",
+        "outputId": "e2dda33b-0cf3-40d1-84f1-31ecc0e8bd4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,12 +468,12 @@
       ],
       "metadata": {
         "id": "Wc6rNQBZKOBJ",
-        "outputId": "a83852e0-b8a3-45a1-902b-4073fc386244",
+        "outputId": "7ae6e7bb-feb2-4410-ee40-496736812207",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +483,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -519,7 +519,7 @@
       "metadata": {
         "id": "hIyND0W4iPLJ"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "HAsnNcjxk7Fj"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -562,7 +562,7 @@
       "metadata": {
         "id": "3ZzMcREwlWX5"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -583,7 +583,7 @@
       "metadata": {
         "id": "tE0YLAKsmCjR"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -598,34 +598,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5WaRVg15mXVm",
-        "outputId": "4b5427e8-7cfb-49b5-d0ed-036d4cd688d1"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "values = U_value.matmul(embedded_sentence.T).T\n",
-        "torch.allclose(value_2, values[1])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ic6eV595mnwl",
-        "outputId": "2225b520-1493-4c35-d669-5dc3b9faa895"
+        "outputId": "d03efcbf-0dbc-4ffd-9778-ca8a4d4670dc"
       },
       "execution_count": 17,
       "outputs": [
@@ -642,6 +615,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "values = U_value.matmul(embedded_sentence.T).T\n",
+        "torch.allclose(value_2, values[1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ic6eV595mnwl",
+        "outputId": "19d5b896-9037-4ca6-dc40-0a81c4b616db"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**Step-1: compute dot product**"
@@ -652,12 +652,134 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "omega_23 = query_2.dot(keys[2])\n",
+        "omega_23"
+      ],
       "metadata": {
-        "id": "0IFuv_6snOEo"
+        "id": "0IFuv_6snOEo",
+        "outputId": "544328bd-4704-4fe9-c8ac-a17426316fe0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(14.3667, grad_fn=<DotBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# we can scale up this computation to all keys\n",
+        "omega_2 = query_2.matmul(keys.T)\n",
+        "omega_2"
+      ],
+      "metadata": {
+        "id": "KtKo_T_EKsi8",
+        "outputId": "14a094f6-9f3f-4455-eb17-80ccabbbcb41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([-25.1623,   9.3602,  14.3667,  32.1482,  53.8976,  46.6626,  -1.2131,\n",
+              "        -32.9392], grad_fn=<SqueezeBackward4>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step-2: Normalization and scaling with softmax**"
+      ],
+      "metadata": {
+        "id": "yOfXUqVxLCMd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attention_weights_2 = F.softmax(omega_2 / d ** 0.5, dim=0)\n",
+        "attention_weights_2"
+      ],
+      "metadata": {
+        "id": "IyaRZoF9LEVI",
+        "outputId": "5696062f-84cd-4639-bbeb-6cdd63327cf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([2.2317e-09, 1.2499e-05, 4.3696e-05, 3.7242e-03, 8.5596e-01, 1.4026e-01,\n",
+              "        8.8897e-07, 3.1935e-10], grad_fn=<SoftmaxBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step-3: Computing context vector**"
+      ],
+      "metadata": {
+        "id": "CoHZ8s4wLrj2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "context_vector_2 = attention_weights_2.matmul(values)\n",
+        "context_vector_2"
+      ],
+      "metadata": {
+        "id": "r0d_IgerLsk1",
+        "outputId": "6fadb5bd-0339-4072-d9e3-3a9e89b2cf39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([-1.2226, -3.4387, -4.3928, -5.2125, -1.1249, -3.3041, -1.4316, -3.2765,\n",
+              "        -2.5114, -2.6105, -1.5793, -2.8433, -2.4142, -0.3998, -1.9917, -3.3499],\n",
+              "       grad_fn=<SqueezeBackward4>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     }
   ]
 }
