--- a/ai-powered-search/13-semantic-search/02_autocomplete.ipynb
+++ b/ai-powered-search/13-semantic-search/02_autocomplete.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPBomLSyWQx/hwyYeR5ikTd",
+      "authorship_tag": "ABX9TyPh9lbWdXMb79+mlxdcMcro",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,10 +39,22 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install sentence_transformers"
+        "!pip install sentence_transformers\n",
+        "!pip install nmslib"
       ],
       "metadata": {
         "id": "0Ak0of-YYfni"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install nmslib"
+      ],
+      "metadata": {
+        "id": "P0pljcYRfJ3B"
       },
       "execution_count": null,
       "outputs": []
@@ -82,7 +94,7 @@
       "metadata": {
         "id": "vAmm7hi_YwM7"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -97,14 +109,197 @@
     {
       "cell_type": "code",
       "source": [
-        "#outdoors\n",
-        "![ ! -d 'outdoors' ] && git clone https://github.com/ai-powered-search/outdoors.git\n",
-        "! cd outdoors && git pull\n",
-        "! cd outdoors && cat outdoors.tgz.part* > outdoors.tgz\n",
-        "! cd outdoors && mkdir -p '../../data/outdoors/' && tar -xvf outdoors.tgz -C '../../data/outdoors/'"
+        "!rm -rf outdoors"
       ],
       "metadata": {
-        "id": "RQPGTKEyrAOq"
+        "id": "OpdeArD_hm1V"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#outdoors\n",
+        "!mkdir -p outdoors\n",
+        "\n",
+        "!git clone https://github.com/ai-powered-search/outdoors.git\n",
+        "!cd outdoors && cat outdoors.tgz.part_* > outdoors.tgz\n",
+        "!cd outdoors && mkdir -p 'data/outdoors/' && tar -xvf outdoors.tgz -C 'data/outdoors/'"
+      ],
+      "metadata": {
+        "id": "PYDnxCcUh2wW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's transform the the outdoors/posts.csv file into a useable dataframe\n",
+        "outdoors_dataframe = cleanDataset('outdoors/data/outdoors/posts.csv')"
+      ],
+      "metadata": {
+        "id": "VNjnWT_ufOxJ"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(outdoors_dataframe))"
+      ],
+      "metadata": {
+        "id": "FLPUI2fJjjsI",
+        "outputId": "8ca8028b-de03-4db3-f6f8-898ca837fca8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "19585\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Build Vocabulary"
+      ],
+      "metadata": {
+        "id": "yo5QvoNhjwoL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nlp = spacy.load('en_core_web_sm')\n",
+        "\n",
+        "def normalize(span):\n",
+        "    #normalizes a noun or verb phrase\n",
+        "    return ' '.join([tok.lemma_.lower() for tok in span])\n",
+        "\n",
+        "def yield_tuple(df,column,total=100):\n",
+        "    #yields a spacy nlp.pipe compliant tuple of the column text values and its dataframe row as the context\n",
+        "    for idx,row in df.iterrows():\n",
+        "        if idx<total:\n",
+        "            yield (row[column],idx)\n",
+        "\n",
+        "def get_concepts(df, total=None, load_from_cache=True):\n",
+        "\n",
+        "    if load_from_cache:\n",
+        "        with open('outdoors/data/outdoors/outdoors_concepts.pickle','rb') as fd:\n",
+        "            concepts = pickle.load(fd)\n",
+        "        with open('outdoors/data/outdoors/outdoors_labels.pickle','rb') as fd:\n",
+        "            labels = pickle.load(fd)\n",
+        "        return concepts,labels\n",
+        "\n",
+        "    #Setting load_from_cache to False will bring you here\n",
+        "    print('Extracting concepts. This could take a while. Take a break and stretch :)')\n",
+        "\n",
+        "    #You can limit the number of rows processed by passing in total (an integer)\n",
+        "    if not total:\n",
+        "        total = len(df)\n",
+        "\n",
+        "    #Get all the noun and verb phrases in the content\n",
+        "    phrases = [] #All the normalized noun/verb phrases (\"concepts\") in the corpus\n",
+        "    sources = [] #The original text labels that was normalized to the concept\n",
+        "\n",
+        "    #Use the spacy matcher to chunk patterns into concept labels\n",
+        "    #We don't need a full taxonomy graph extraction, just a vocabulary with term frequencies\n",
+        "    matcher = Matcher(nlp.vocab)\n",
+        "    nountags = ['NN','NNP','NNS','NOUN'] #Nouns\n",
+        "    verbtags = ['VB','VBD','VBG','VBN','VBP','VBZ','VERB'] #Verbs\n",
+        "    matcher.add(\"noun_phrases\", [[{\"TAG\":{\"IN\": nountags}, \"IS_ALPHA\": True,\"OP\":\"+\"}]])\n",
+        "    matcher.add(\"verb_phrases\", [[{\"TAG\":{\"IN\": verbtags}, \"IS_ALPHA\": True,\"OP\":\"+\", \"LEMMA\":{\"NOT_IN\":[\"be\"]}}]])\n",
+        "    for doc,idx in tqdm.tqdm(nlp.pipe(yield_tuple(df,\"body\",total=total), batch_size=40, n_threads=4, as_tuples=True),total=total):\n",
+        "        text = doc.text\n",
+        "        matches = matcher(doc)\n",
+        "        for matchid,start,end in matches:\n",
+        "            span = doc[start:end]\n",
+        "            phrases.append(normalize(span))\n",
+        "            sources.append(span.text)\n",
+        "\n",
+        "\n",
+        "    #Aggregate the normalized concepts by term frequency\n",
+        "    concepts = {}\n",
+        "    labels = {}\n",
+        "    for i in range(len(phrases)):\n",
+        "        phrase = phrases[i]\n",
+        "        if phrase not in concepts:\n",
+        "            concepts[phrase] = 0\n",
+        "            labels[phrase] = sources[i]\n",
+        "        concepts[phrase] += 1\n",
+        "\n",
+        "    sorted_concepts = {k: v for k, v in sorted(concepts.items(), key=lambda item: item[1], reverse=True)}\n",
+        "\n",
+        "    with open('outdoors/data/outdoors/outdoors_concepts.pickle','wb') as fd:\n",
+        "        pickle.dump(sorted_concepts,fd)\n",
+        "    with open('outdoors/data/outdoors/outdoors_labels.pickle','wb') as fd:\n",
+        "        pickle.dump(labels,fd)\n",
+        "\n",
+        "    return sorted_concepts,labels"
+      ],
+      "metadata": {
+        "id": "8sd1a0Fjj0O7"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What are the concepts with the highest frequency?"
+      ],
+      "metadata": {
+        "id": "K-fJWti4kt8Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's do examining the vocabulary\n",
+        "concepts, labels = get_concepts(outdoors_dataframe, load_from_cache=True)\n",
+        "top_cons = {k: v for (k, v) in concepts.items() if v > 5}\n",
+        "\n",
+        "print(f\"Total number of labels: {len(labels.keys())}\")\n",
+        "print(f\"Total number of concepts: {len(concepts.keys())}\")\n",
+        "print(f\"Concepts with greater than 5 term frequency: {len(top_cons.keys())}\")"
+      ],
+      "metadata": {
+        "id": "98wlKXcmkiE0",
+        "outputId": "eb8230bf-6418-4ffb-8c5d-95d98f9710e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total number of labels: 124366\n",
+            "Total number of concepts: 124366\n",
+            "Concepts with greater than 5 term frequency: 12375\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "json.dumps(top_cons, indent=2)"
+      ],
+      "metadata": {
+        "id": "tG9Bl1VtmdQC"
       },
       "execution_count": null,
       "outputs": []
